/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "AVChannelSetupStatusEnum.proto";

message AVChannelSetupResponse {
  required AVChannelSetupStatus.Enum media_status = 1;
  required uint32 max_unacked = 2;
  repeated uint32 configs = 3;
}
